--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   padding-left: 50px;
   padding-top: 50px;
   font-family: 'Rampart One', cursive;
+  border-radius: 25px;
 }
 
 .body {
@@ -50,4 +51,5 @@ button {
   color: white;
   padding: 10px;
   font-size: 20px;
+  border-radius: 25px;
 }
