--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .banner {
   width: 100%;
-  height: 300px;
   background-image: url("https://images.unsplash.com/photo-1590019012497-b44f1aaa40d3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80");
   color: white;
   font-size: 80px;
   padding-left: 50px;
   padding-top: 50px;
+  padding-bottom: 50px;
   font-family: 'Rampart One', cursive;
   border-radius: 25px;
 }
